# hinterface

./: .gitignore  .travis.yml  LICENSE  README.md  default.nix  erl_echo.escript  erl_hay.escript  flake.nix  hay_erl.escript  hinterface.cabal  shell.nix  stack.yaml
.github/workflows/: test.yml
app/: Main.hs  Person.hs
echo/: Main.hs
examples/echo/: Main.hs
nix/: ide.nix  overlay.nix  pkgs.nix  sources.json
nix/hoogle-tls/: cert.pem  privkey.pem
src/Data/: IOx.hs
src/Foreign/Erlang/: Connection.hs  ControlMessage.hs  Digest.hs  Epmd.hs  GTerm.hs  Handshake.hs  LocalNode.hs  Mailbox.hs  NodeData.hs  NodeState.hs  Term.hs
src/Foreign/Erlang/LocalNode/: Internal.hs
src/Language/Erlang/: Connection.hs  ControlMessage.hs  Digest.hs  Epmd.hs  Handshake.hs  LocalNode.hs  Mailbox.hs  NodeData.hs  NodeState.hs  Term.hs
src/Network/: BufferedSocket.hs
src/Util/: Binary.hs  BufferedIOx.hs  BufferedSocket.hs  FloatCast.hs  IOExtra.hs  IOx.hs  Socket.hs  Util.hs
test/Data/: IOxSpec.hs
test/Foreign/Erlang/: ControlMessageSpec.hs  HandshakeSpec.hs  LocalNodeSpec.hs  NodeDataSpec.hs  Term2Experimental.hs  TermSpec.hs
test/Language/Erlang/: ControlMessageSpec.hs  HandshakeSpec.hs  NodeDataSpec.hs  TermSpec.hs
test/Util/: IOxSpec.hs
