name:                hinterface
version:             0.5.2.0
synopsis:            Haskell / Erlang interoperability library
description:         A library for building nodes of a distributed Erlang system in Haskell.

                     Nodes can be created and registered to an epmd, Erlang terms can be
                     marshalled to/from Erlangs binary term representation and message can
                     be sent to or received from processes running on a different node.

                     In it's preliminary state hinterface supports of Erlangs binary terms
                     and a subset of the distribution protocol.

homepage:            https://github.com/lindenbaum/hinterface
license:             BSD3
license-file:        LICENSE
author:              Timo Koepke, Sven Heyll
maintainer:          timo.koepke@googlemail.com, sven.heyll@gmail.com
copyright:           2016, 2017 Timo Koepke, Sven Heyll
category:            Language
build-type:          Simple
extra-source-files:  README.md, stack.yaml, .travis.yml, Setup.hs, .gitignore
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Util.IOExtra
                     , Util.BufferedIOx
                     , Util.Socket
                     , Network.BufferedSocket
                     , Util.Binary
                     , Util.FloatCast
                     , Foreign.Erlang.NodeState
                     , Foreign.Erlang.NodeData
                     , Foreign.Erlang.Epmd
                     , Foreign.Erlang.Digest
                     , Foreign.Erlang.GTerm
                     , Foreign.Erlang.Handshake
                     , Foreign.Erlang.Term
                     , Foreign.Erlang.LocalNode
                     , Foreign.Erlang.ControlMessage
                     , Foreign.Erlang.Mailbox
                     , Foreign.Erlang.Connection
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , FlexibleContexts
  ghc-options:         -Wall -O2 -funbox-strict-fields
  build-depends:       QuickCheck
                     , array
                     , async
                     , base >= 4.9 && < 5
                     , binary
                     , bytestring
                     , containers
                     , cryptonite
                     , exceptions
                     , lifted-async
                     , lifted-base
                     , memory
                     , monad-control
                     , monad-logger
                     , mtl
                     , network
                     , random
                     , resourcet
                     , safe-exceptions
                     , stm
                     , text
                     , transformers
                     , transformers-base
                     , vector

  default-language:    Haskell2010

executable hinterface-echo
  hs-source-dirs:      examples/echo
  main-is:             Main.hs
  build-depends:       base >= 4.9 && < 5
                     , resourcet
                     , monad-logger
                     , hinterface
                     , lifted-base
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite hinterface-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , async
                     , base >= 4.9 && < 5
                     , binary
                     , bytestring
                     , hinterface
                     , hspec
                     , monad-logger
                     , transformers
  other-modules:       Foreign.Erlang.NodeDataSpec
                     , Foreign.Erlang.HandshakeSpec
                     , Foreign.Erlang.ControlMessageSpec
                     , Foreign.Erlang.TermSpec
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lindenbaum/hinterface.git
