cabal-version:       3.0
name:                hinterface
version:             3.1.0
synopsis:            Haskell / Erlang interoperability library
description:         A library for building nodes of a distributed Erlang system in Haskell.

                     Nodes can be created and registered to an epmd, Erlang terms can be
                     marshalled to/from Erlangs binary term representation and message can
                     be sent to or received from processes running on a different node.

                     In it's preliminary state hinterface supports of Erlangs binary terms
                     and a subset of the distribution protocol.

homepage:            https://github.com/lindenbaum/hinterface
license:             BSD-3-Clause
license-file:        LICENSE
author:              Timo Koepke, Sven Heyll
maintainer:          timo.koepke@googlemail.com, sven.heyll@gmail.com
copyright:           2016-2022 Timo Koepke, Sven Heyll
category:            Language
build-type:          Simple
extra-source-files:  README.md, Setup.hs, .gitignore, cabal.project

library
  hs-source-dirs:      src
  exposed-modules:     Util.IOExtra
                     , Util.BufferedIOx
                     , Util.Socket
                     , Network.BufferedSocket
                     , Util.Binary
                     , Util.FloatCast
                     , Foreign.Erlang.NodeState
                     , Foreign.Erlang.NodeData
                     , Foreign.Erlang.Epmd
                     , Foreign.Erlang.Digest
                     , Foreign.Erlang.Handshake
                     , Foreign.Erlang.Term
                     , Foreign.Erlang.LocalNode
                     , Foreign.Erlang.ControlMessage
                     , Foreign.Erlang.Mailbox
                     , Foreign.Erlang.Connection
  default-extensions:  OverloadedStrings
                     , NamedFieldPuns
                     , FlexibleContexts
                     , PatternSynonyms
                     , ViewPatterns
  ghc-options:         -Wall -funbox-strict-fields
  build-depends:       QuickCheck
                     , array
                     , async
                     , base ^>= 4.14
                     , binary
                     , bytestring
                     , containers
                     , cryptonite == 0.26.*
                     , deepseq
                     , exceptions
                     , memory == 0.15.*
                     , monad-logger
                     , mtl
                     , network
                     , random
                     , resourcet
                     , stm
                     , text
                     , transformers
                     , transformers-base
                     , unliftio
                     , vector <13

  default-language:    Haskell2010

test-suite hinterface-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , async
                     , base ^>= 4.14
                     , binary
                     , bytestring
                     , hinterface
                     , hspec
                     -- added here because of https://github.com/input-output-hk/haskell.nix/issues/231
                     , hspec-discover
                     , monad-logger
                     , resourcet
                     , transformers
                     , vector
                     , unliftio
  -- commented out because of https://github.com/input-output-hk/haskell.nix/issues/231
  -- build-tool-depends: hspec-discover:hspec-discover
  other-modules:       Foreign.Erlang.NodeDataSpec
                     , Foreign.Erlang.HandshakeSpec
                     , Foreign.Erlang.ControlMessageSpec
                     , Foreign.Erlang.TermSpec
                     , Foreign.Erlang.Term2Experimental
  default-extensions:  AllowAmbiguousTypes
                     , ConstraintKinds
                     , DataKinds
                     , DeriveFoldable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DeriveTraversable
                     , ExistentialQuantification
                     , FlexibleContexts
                     , FlexibleInstances
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , LambdaCase
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedLists
                     , OverloadedStrings
                     , PatternSynonyms
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , ViewPatterns
  other-extensions:    CPP
                     , IncoherentInstances
                     , Strict
                     , StrictData
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -O1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lindenbaum/hinterface.git
